# HomSub

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-and-run.sh  build-third-party.sh  build.sh  run-and-save-result.sh  save-result.sh  third_party.h.in
Homomorphism/: CMakeLists.txt
Homomorphism/include/graph/: graph.h
Homomorphism/include/homomorphism/: graph.h
Homomorphism/src/: graph.cpp
Test/: CMakeLists.txt  main.cpp
experiments/: CMakeLists.txt  main.cpp
experiments/include/experiments/: csv_logger.h  graph_files_experiments.h  graph_generator.h  readable_logger.h  sanity_test_factory.h  test-logger.h  test.h  test_factory.h  test_logger.h  test_runner.h  test_settings.h
experiments/src/: csv_logger.cpp  graph_files_experiments.cpp  graph_generator.cpp  readable_logger.cpp  sanity_test_factory.cpp  test-logger.cpp  test.cpp  test_factory.cpp  test_logger.cpp  test_runner.cpp  test_settings.cpp
homomorphism/: CMakeLists.txt
homomorphism/src/: adjacency_matrix_graph.cpp  bruteforce_counter.cpp  calculation_remapper.cpp  calculation_remapper_extract_variants.cpp  calculation_remapper_insert_variants.cpp  configuration_factory.cpp  edge_set_graph.cpp  (+46 more)
performance-experiments/: README.md  create-experiment-folder.sh  create-experiment1-1.sh  create-experiment1-2.sh  create-experiment1-3.sh  create-experiment2-1.sh  create-experiment2-2.sh  create-experiment3-1.sh  create-experiment3-2.sh  create-experiment4-1.sh  create-experiment4-2.sh  create-experiment5-1.sh  create-experiment5-2.sh  create-experiment6-1.sh  create-experiment6-2.sh  create-experiment7-1.sh  create-experiment7-2.sh  create-experiment7-3.sh  createall.sh  runall.sh
src/: main.cpp
test/: CMakeLists.txt  main.cpp
test/include/test/: graph_generator.h  test.h  test_factory.h  test_runner.h  test_settings.h
test/src/: graph_generator.cpp  test-logger.cpp  test.cpp  test_factory.cpp  test_runner.cpp
utilities/: Experiments_LogMemory  TamakiRunner.java
(+97 files in other folders)
